--- a/common/templates/common/sidebar.html
+++ b/common/templates/common/sidebar.html
@@ -30,6 +30,12 @@
 
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item">
+      <a class="nav-link collapsed" href="/shop" aria-controls="collapseTwo" data-toggle="collapse">
+        <i class="fas fa-fw fa-cog"></i>
+        <span>Common</span>
+      </a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link collapsed" href="/shop/innimall" aria-controls="collapseTwo" data-toggle="collapse">
         <i class="fas fa-fw fa-cog"></i>
         <span>Innisfree</span>
@@ -47,12 +53,12 @@
         <span>GS shop</span>
       </a>
     </li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link collapsed" href="/shop/cjmall" aria-controls="collapseTwo" data-toggle="collapse">
         <i class="fas fa-fw fa-cog"></i>
         <span>CJ mall</span>
       </a>
-    </li>
+    </li> -->
     <li class="nav-item">
       <a class="nav-link collapsed" href="/shop/glowpick" aria-controls="collapseTwo" data-toggle="collapse">
         <i class="fas fa-fw fa-cog"></i>
