--- a/common/templates/common/index.html
+++ b/common/templates/common/index.html
@@ -50,7 +50,34 @@
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
             <h1 class="h3 mb-0 text-gray-800">Shops</h1>
-            <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
+            <style>
+              .update_button li{
+                list-style:none;
+                float:left;
+                margin-left:10px;
+                margin-top:20px;
+              }
+            </style>
+            <ul class="update_button">
+              <li>
+                <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+                  <i class="fas fa-download fa-sm text-white-50"></i>
+                  GlowpickUpdate
+                </a>
+              </li>
+              <li>
+                <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+                  <i class="fas fa-download fa-sm text-white-50"></i>
+                  GlowpickUpdate
+                </a>
+              </li>
+              <li>
+                <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+                  <i class="fas fa-download fa-sm text-white-50"></i>
+                  GlowpickUpdate
+                </a>
+              </li>
+            </ul>
           </div>
 
           <!-- Content Row -->
@@ -136,10 +163,53 @@
             </div>
           </div>
 
+
           <!-- Content Row -->
+          <div class="row">
+            <!-- Content Column -->
+            <div class="col-md-12">
+              <div class="card shadow mb-4">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <h6 class="m-0 font-weight-bold text-primary">리뷰가 가장 많은 상품 TOP3</h6>
+                </div>
+                <!-- Card Body -->
+                <div class="card-body">
+                  <div class="table-responsive">
+                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                      <tbody>
+                        <tr>
+                            <td style="width:100px;"><strong>순위</strong></td>
+                            <td>상품명</td>
+                            <td>리뷰수</td>
+                        </tr>
+                        <tr>
+                            <td><strong>1위</strong></td>
+                            <td>19 이니스프리 납작 아이브로우 펜슬</td>
+                            <td>207개</td>
+                        </tr>
+                        <tr>
+                            <td><strong>2위</strong></td>
+                            <td>그린티밸런싱로션_세븐데이즈_10ML(19)</td>
+                            <td>200개</td>
+                        </tr>
+                        <tr>
+                          <td><strong>3위</strong></td>
+                          <td>그린티밸런싱스킨_세븐데이즈_10ML(19)</td>
+                          <td>200개</td>
+                      </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
+
+
+          <!-- Content Row -->
           <div class="row" style="margin-top:10px;">
-
             <!-- Area Chart -->
             <div class="col-md-6">
               <div class="card shadow mb-4">
@@ -194,7 +264,7 @@
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-primary">리뷰 그래프</h6>
+                  <h6 class="m-0 font-weight-bold text-primary">[APmall] top20 제품 월별 판매량</h6>
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
@@ -202,7 +272,25 @@
                 </div>
               </div>
             </div>
-        </div>
+          </div>
+
+
+          <!-- Content Row -->
+          <div class="row">
+            <!-- Content Column -->
+            <div class="col-md-12">
+              <div class="card shadow mb-4">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <h6 class="m-0 font-weight-bold text-primary">[APmall] top20 제품 월별 판매량</h6>
+                </div>
+                <!-- Card Body -->
+                <div class="card-body" style="margin:auto">
+                  <img src = "{% static 'common/img/ap_mall.jpeg' %}" style="width:600px;">
+                </div>
+              </div>
+            </div>
+          </div>
 
         
 
