--- a/common/templates/common/sidebar.html
+++ b/common/templates/common/sidebar.html
@@ -35,7 +35,7 @@
         <span>Common</span>
       </a>
     </li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link collapsed" href="/shop/innimall" aria-controls="collapseTwo" data-toggle="collapse">
         <i class="fas fa-fw fa-cog"></i>
         <span>Innisfree</span>
@@ -52,19 +52,19 @@
         <i class="fas fa-fw fa-cog"></i>
         <span>GS shop</span>
       </a>
-    </li>
+    </li> -->
     <!-- <li class="nav-item">
       <a class="nav-link collapsed" href="/shop/cjmall" aria-controls="collapseTwo" data-toggle="collapse">
         <i class="fas fa-fw fa-cog"></i>
         <span>CJ mall</span>
       </a>
     </li> -->
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link collapsed" href="/shop/glowpick" aria-controls="collapseTwo" data-toggle="collapse">
         <i class="fas fa-fw fa-cog"></i>
         <span>Glowpick</span>
       </a>
-    </li>
+    </li> -->
     
 
     <!-- Nav Item - Utilities Collapse Menu -->
