--- a/common/templates/common/index.html
+++ b/common/templates/common/index.html
@@ -272,6 +272,22 @@
             </div>
           </div>
 
+          <!-- Content Row -->
+          <div class="row">
+            <!-- Content Column -->
+            <div class="col-md-12">
+              <div class="card shadow mb-4">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <h6 class="m-0 font-weight-bold text-primary">[GSshop] top20 제품 월별 판매량</h6>
+                </div>
+                <!-- Card Body -->
+                <div class="card-body">
+                  <img src = "{% static 'common/img/GS.png' %}" style="width:100%;">
+                </div>
+              </div>
+            </div>
+          </div>
 
           <!-- Content Row -->
           <div class="row">
