--- a/common/templates/common/index.html
+++ b/common/templates/common/index.html
@@ -236,7 +236,7 @@
                 <!-- Card Body -->
                 <div class="card-body" style="margin:auto;">
                   <!-- <canvas id="review-chart" data-url="{% url 'review-chart' %}"></canvas> -->
-                  <img src = "{% static 'common/img/review.png' %}" style="width:600px;">
+                  <img src = "{% static 'common/img/review.png' %}" style="width:100%;">
                 </div>
               </div>
             </div>
